--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,8 @@ body {
   height: 95vh;
   background-image: linear-gradient(
       to right bottom,
-      rgba(177, 197, 174, 0.314),
-      hsla(160, 64%, 43%, 0.432)
+      rgba(217, 243, 213, 0.214),
+      hsla(160, 81%, 25%, 0.232)
     ),
     url(../img/hero.jpg);
   background-size: cover;
@@ -40,7 +40,60 @@ body {
 .logo{
   height: 35px;
 }
-.heading-primary{
-  
+.text-box{
+  position:absolute;
+  top:40%;
+  left:50%;
+  transform: translate(-50%,-50%);
 
+}
+.heading-primary{
+  color:#fff;
+  text-transform: uppercase;
+}
+.heading-primary--main{
+display: block;
+font-size: 60px;
+font-weight: 400;
+letter-spacing: 35px;
+animation-name: moveinleft;
+animation-duration: 3s;
+}
+.heading-primary--sub{
+  display: block;
+font-size: 20px;
+font-weight: 700;
+letter-spacing: 17.4px;
+animation-name: moveinright;
+animation-duration: 3s;
+
+}
+
+@keyframes moveinleft{
+  0%{
+    opacity:0 ;
+    transform: translateX(-100px);
+  }
+
+  80%{
+  }
+
+  100%{
+  opacity:1;
+  transform: translate(0);
+  }
+}
+@keyframes moveinright{
+  0%{
+    opacity:0 ;
+    transform: translateX(100px);
+  }
+
+  80%{
+  }
+
+  100%{
+  opacity:1;
+  transform: translate(0);
+  }
 }
