--- a/css/style.css
+++ b/css/style.css
@@ -45,11 +45,14 @@ body {
   top:40%;
   left:50%;
   transform: translate(-50%,-50%);
+  text-align: center;
 
 }
 .heading-primary{
   color:#fff;
   text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 60px;
 }
 .heading-primary--main{
 display: block;
@@ -57,7 +60,8 @@ font-size: 60px;
 font-weight: 400;
 letter-spacing: 35px;
 animation-name: moveinleft;
-animation-duration: 3s;
+animation-duration: 2s;
+animation-timing-function: ease-out;
 }
 .heading-primary--sub{
   display: block;
@@ -65,7 +69,8 @@ font-size: 20px;
 font-weight: 700;
 letter-spacing: 17.4px;
 animation-name: moveinright;
-animation-duration: 3s;
+animation-duration: 2s;
+animation-timing-function: ease-out;
 
 }
 
@@ -76,6 +81,7 @@ animation-duration: 3s;
   }
 
   80%{
+    transform: translateX(10px);
   }
 
   100%{
@@ -90,10 +96,69 @@ animation-duration: 3s;
   }
 
   80%{
+    transform: translateX(-10px);
   }
 
   100%{
   opacity:1;
   transform: translate(0);
   }
+}
+@keyframes moveinbottom{
+  0%{
+    opacity:0 ;
+    transform: translateY(30px);
+  }
+
+  100%{
+  opacity:1;
+  transform: translate(0);
+  }
+}
+
+.btn:link,
+.btn:visited{
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all .2s;
+  position: relative;
+}
+.btn:hover{
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+}
+.btn:active{
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
+
+.btn-white{
+  background-color: #fff;
+  color: #777;
+}
+.btn::after{
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width:100%;
+  border-radius: 100px;
+  position:absolute;
+  top:0;
+  left:0;
+  z-index: -1;
+}
+.btn-white::after{
+  background-color:#fff;
+  transition: all .4s;
+}
+.btn:hover::after{
+  transform: scale(1.5);
+  opacity: 0;
+}
+.btn-animated{
+  animation :moveinbottom .4s ease-out .65s;
+  animation-fill-mode: backwards;
 }
